glx/testdata/invalid/invalid-entity-ids/persons/person_invalid_id.glx
persons:
  person_invalid_id:
    properties:
      given_name: "Test"
      family_name: "Person"
